@@ -42,6 +42,9 @@ Lua:
      Spring.UnitRendering.SetFeatureLuaDraw
      Spring.FeatureRendering.SetUnitLuaDraw
 
+ - add unsynced callout Spring.SetMapShadingTexture(string texType, string texName) -> boolean
+   example usage: Spring.SetMapShadingTexture("$ssmf_specular", "name_of_my_shiny_texture")
+
  - add unsynced callout Spring.SetMapShader(
      number standardShaderID,
      number deferredShaderID
